--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <div class="cabecalho">
         <h1>CURIOSIDADES DE TECNOLOGIA</h1>
         <p class="pcabecalho">Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</p>
-        <p><a href="" class="link">Home</a> <a href="" class="link">Notícias</a> <a href="" class="link">Curiosidades</a> <a href="" class="link">Fale Conosco</a></p>
+        <p>
+            <a href="" class="link">Home</a> 
+            <a href="" class="link">Notícias</a> 
+            <a href="" class="link">Curiosidades</a>
+            
+        </p>
     </div>
     <div class="corpo">
         <h2 class="segundo">HISTÓRIA DO MASCOTE DO ANDROID</h2>
