--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="cabecalho">
         <h1>CURIOSIDADES DE TECNOLOGIA</h1>
         <p class="pcabecalho">Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</p>
-        <p>
+        <p class="link">
             <a href="" class="link">Home</a> 
             <a href="" class="link">Notícias</a> 
             <a href="" class="link">Curiosidades</a>
